refactor terraform jobs to templates

--- a/standard-deployment.yml
+++ b/standard-deployment.yml
@@ -24,7 +24,7 @@ variables:
     defaultBranchName: ${{ parameters.defaultBranchName }}
 
 - ${{ if eq(parameters.useTerraform, true) }}:
-  - template: helpers/terraform-environment.yml
+  - template: Terraform/environment.yml
     parameters:
       AWS_ACCOUNT: $(AWS_ACCOUNT)  
       AWS_REGION: $(AWS_REGION)
@@ -42,64 +42,13 @@ stages:
         buildContainerImage: ${{ parameters.buildContainerImage }}
 
   - ${{ if eq(parameters.useTerraform, true) }}:
-    - job: TerraformPlan
-      displayName: Terraform Plan
-      steps:
-      - template: helpers/terraform-init.yml
-
-      - task: TerraformTaskV1@0
-        displayName: Plan Terraform
-        name: TerraformPlan
-        inputs:
-          provider: $(TF_PROVIDER)
-          command: plan
-          workingDirectory: $(TF_PATH)
-          commandOptions: -out=$(Build.StagingDirectory)/tfplan -var-file=$(TF_VAR_FILE)
-          environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
-
-      - script: mv $(TerraformPlan.jsonPlanFilePath) $(Build.StagingDirectory)/tfplan.json
-        name: GetTFPlanJson
-        displayName: Get tfplan.json
-
-      - publish: $(Build.StagingDirectory)
-        artifact: tfplan-$(ENVIRONMENT_NAME)
-        displayName: Publish Terraform Plan
+    - template: Terraform/validate.yml
 
 - stage: BuildDeploy
   displayName: Build and Deploy
   jobs:
   - ${{ if eq(parameters.useTerraform, true) }}:
-    - deployment: Terraform
-      environment: $(ENVIRONMENT_NAME)
-      strategy:
-        runOnce:
-          deploy:  
-            steps:
-            - checkout: self
-
-            - download: current
-              artifact: tfplan-$(ENVIRONMENT_NAME)
-              displayName: Get tfplan
-
-            - template: helpers/terraform-init.yml
-
-            - task: TerraformTaskV1@0
-              displayName: Apply Terraform
-              name: TerraformApply
-              inputs:
-                provider: $(TF_PROVIDER)
-                command: apply
-                workingDirectory: $(TF_PATH)
-                commandOptions: $(Pipeline.Workspace)/tfplan-$(ENVIRONMENT_NAME)/tfplan
-                environmentServiceNameAWS: $(TF_SERVICE_CONNECTOR)
-
-            - script: mv $(TerraformApply.jsonOutputVariablesPath) $(Build.StagingDirectory)/tfoutput.json
-              name: GetTFOutputFileName
-              displayName: Get Terraform Output
-
-            - publish: $(Build.StagingDirectory)
-              artifact: tfoutput-$(ENVIRONMENT_NAME)
-              displayName: Publish Terraform Output
+    - template: Terraform/deploy.yml
 
   - ${{ if in(parameters.deployType, 'ReactApp') }}:
     - template: ${{ parameters.deployType }}/build.yml
