--- a/Terraform/deploy.yml
+++ b/Terraform/deploy.yml
@@ -11,7 +11,7 @@ jobs:
           artifact: tfplan-$(ENVIRONMENT_NAME)
           displayName: Get tfplan
 
-        - template: Terraform/init.yml
+        - template: init.yml
 
         - task: TerraformTaskV1@0
           displayName: Apply Terraform
