create LambdaService build type

--- a/ReactApp/build.yml
+++ b/ReactApp/build.yml
@@ -23,9 +23,9 @@ jobs:
   - task: Cache@2
     displayName: Check Dependency Cache
     inputs:
-      key: 'yarn | "$(Agent.OS)" | yarn.lock'
-      path: 'node_modules'
-      cacheHitVar: 'CACHE_RESTORED'
+      key: yarn | "$(Agent.OS)" | yarn.lock
+      path: node_modules
+      cacheHitVar: CACHE_RESTORED
       restoreKeys: |
         yarn | $(Agent.OS)
         yarn
