--- a/Terraform/deploy.yml
+++ b/Terraform/deploy.yml
@@ -1,3 +1,9 @@
+parameters:
+- name: deployType
+  type: string
+- name: lambdas
+  type: object
+
 jobs:
 - deployment: Terraform
   environment: $(ENVIRONMENT_NAME)
@@ -7,6 +13,11 @@ jobs:
         steps:
         - checkout: self
 
+        - ${{ if eq(parameters.deployType, 'LambdaService') }}:
+          - template: ../LambdaService/deploy.yml
+            parameters:
+              lambdas: ${{ parameters.lambdas }}
+              
         - download: current
           artifact: tfplan-$(ENVIRONMENT_NAME)
           displayName: Get tfplan
