separate build/deploy stage

--- a/LambdaService/deploy.yml
+++ b/LambdaService/deploy.yml
@@ -1,6 +1,8 @@
 parameters:
 - name: lambdas
   type: object
+- name: lambdasPath
+  type: string
 
 steps:
 - ${{ each lambdaName in parameters.lambdas }}:
