--- a/helpers/container-get-image.yml
+++ b/helpers/container-get-image.yml
@@ -1,18 +1,19 @@
 parameters:
-- name: buildContainerImage
+- name: useContainerImage
   type: string
-  default: ''
+  default: true
 
 steps:
-# use the buildContainerImage param if set, otherwise find the devcontainer image url
-- ${{ if ne(parameters.buildContainerImage, '') }}:
+# use the useContainerImage param if set
+- ${{ if ne(parameters.useContainerImage, 'true') }}:
   - script: echo "##vso[task.setvariable variable=url;isOutput=true]${image}"
     displayName: Get Image
     name: GetImage
     env: 
-      image: ${{ parameters.buildContainerImage }}
+      image: ${{ parameters.useContainerImage }}
 
-- ${{ if eq(parameters.buildContainerImage, '') }}:
+# otherwise find the devcontainer image url
+- ${{ if eq(parameters.useContainerImage, 'true') }}:
   - script: |
       variant=$(jq -er '.build.args.VARIANT | select (.!=null)' devcontainer.json || sed '/^ARG VARIANT=/!d;s|.*=||;s|^"||;s|"$||' Dockerfile)
       image=$(jq -er '.image | select (.!=null)' devcontainer.json || sed '/FROM/!d;s|FROM ||;s|${VARIANT}|'"${variant}|" Dockerfile)
