refactor lambda build

--- a/LambdaService/build.yml
+++ b/LambdaService/build.yml
@@ -1,22 +1,18 @@
 parameters:
-- name: lambdas
+- name: sources
   type: object
-- name: lambdasPath
-  type: string
 
 steps:
-- ${{ each lambdaName in parameters.lambdas }}:
+- ${{ each lambdaName in parameters.sources }}:
   - task: Cache@2
     displayName: Cache ${{ lambdaName }} Prod Dependencies
     inputs:
       key: npm | prod | "$(Agent.OS)" | lambdas/${{ lambdaName }}/package.json
-      path: ${{ parameters.lambdasPath }}/${{ lambdaName }}/node_modules
+      path: lambdas/${{ lambdaName }}/node_modules
       cacheHitVar: CACHE_RESTORED
-      restoreKeys: |
-        npm | $(Agent.OS)
-        npm
+      restoreKeys: npm | prod | $(Agent.OS)
 
   - script: npm install --only=prod
     displayName: Install ${{ lambdaName }} Production Dependencies
     condition: ne(variables.CACHE_RESTORED, 'true')
-    workingDirectory: ${{ parameters.lambdasPath }}/${{ lambdaName }}
+    workingDirectory: lambdas/${{ lambdaName }}
