--- a/Terraform/deploy.yml
+++ b/Terraform/deploy.yml
@@ -12,7 +12,7 @@ jobs:
         steps:
         - checkout: self
 
-        - ${{ parameters.preDeploy }}
+        - ${{ parameters.preDeploySteps }}
               
         - download: current
           artifact: tfplan-$(ENVIRONMENT_NAME)
