--- a/LambdaService/deploy.yml
+++ b/LambdaService/deploy.yml
@@ -13,3 +13,5 @@ steps:
   
   - script: mv $(Pipeline.Workspace)/${{ lambdaName }}/${{ lambdaName }}.zip terraform/build/${{ lambdaName }}.zip
     displayName: Stage ${{ lambdaName }} Artifact
+
+- script: ls -a terraform/build/
