fix validation condition

--- a/Terraform/validate.yml
+++ b/Terraform/validate.yml
@@ -1,6 +1,7 @@
 jobs:
 - job: TerraformPlan
   displayName: Terraform Plan
+  condition: or(eq(variables.ENVIRONMENT_NAME, 'DEV'), eq(variables.ENVIRONMENT_NAME, 'QA'))
   steps:
   - template: init.yml
 
