--- a/Terraform/init.yml
+++ b/Terraform/init.yml
@@ -11,7 +11,7 @@ steps:
     provider: $(TF_PROVIDER)
     command: init
     workingDirectory: $(TF_PATH)
-    commandOptions: -backend-config=role_arn=arn:aws:iam::$(TF_VAR_AWS_ACCOUNT):role/wsl_role_deploy_Infrastructure
+    commandOptions: -backend-config=role_arn=$(TF_VAR_AWS_ROLE_ARN)
     backendServiceAWS: $(TF_SERVICE_CONNECTOR)
     backendAWSBucketName: $(TF_BACKEND_BUCKET)
     backendAWSKey: $(TF_BACKEND_KEY)
